<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicial"
            android:icon="@drawable/ic_menu_inicial"
            android:title="@string/menu_inicial" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_menu_historico"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_mapas"
            android:icon="@drawable/ic_menu_mapa"
            android:title="@string/menu_mapas" />

        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_scan"
            android:title="@string/menu_scan" />


    </group>


</menu>
