<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/nome_produto_lembrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/info_nome_produto"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/valor_unit_produto_lembrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/info_valor_unitario"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"/>


    <EditText
        android:id="@+id/quantidade_produto_lembrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/info_quantidade_produto"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_concluirprodlembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:background="@color/FFFFFF"
            android:text="@string/btn_concluir_produto" />

        <Button
            android:id="@+id/btn_addmaisprodlembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/FFFFFF"
            android:text="@string/btn_add_mais_produto"
            android:layout_marginStart="4dp" />

    </LinearLayout>

</LinearLayout>