<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AdicionarLocalManual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Informações do Local de Compra"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_nome_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/info_nome_local"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nome_local"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/info_nome_local" />

        <TextView
            android:id="@+id/info_cnpj_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/info_cnpj_local"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cnpj_local"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/info_cnpj_local"
            android:inputType="date" />

        <TextView
            android:id="@+id/info_end_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/info_endereco_local"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/end_local"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/info_endereco_local" />

        <Button
            android:id="@+id/btn_VerifcarEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="verificarEndereco"
            android:text="@string/btn_verificar_end"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>