<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AdicionarListaManualActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_info_lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/info_titulo_lista"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_num_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/info_numero_nota_fiscal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/num_nota_fiscal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/info_numero_nota_fiscal"
                android:inputType="number" />

            <TextView
                android:id="@+id/info_data_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/info_data_compra_lista"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_data_compra_lista"
                android:visibility="visible"
                android:background="@color/FFFFFF"></Button>

            <TextView
                android:id="@+id/info_hora_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/info_tempo_compra_lista"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:text="@string/info_tempo_compra_lista"
                android:background="@color/FFFFFF"/>


            <TextView
                android:id="@+id/info_total_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/info_total_compra_lista"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/total_compra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/info_total_compra_lista"
                android:inputType="numberDecimal" />

            <!--<TextView
                android:id="@+id/total_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total da Compra"
                android:textAppearance="@android:style/TextAppearance.Medium" /> -->

            <EditText
                android:id="@+id/data_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="true"
                android:hint="Data da compra (dd/mm/aaaa)"
                android:inputType="date"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/hora_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Hora da compra"
                android:inputType="time"
                android:visibility="invisible"/>


        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>